UF-3084 - Update /webmessage resource
Updates the /webmessage resource, adding support for sending attachments,
and bumps the API version to 2.3.
